cmake_minimum_required(VERSION 3.13)  # CMake version check
project(baekjoon_10818_yuho)

# Add main.cpp file of project root directory as source file
set(SOURCE_FILES main.cpp)

# Add executable target with source files listed in SOURCE_FILES variable
add_executable(baekjoon_10818_yuho ${SOURCE_FILES})
